# SmartCalc_CPP

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_RUS.md  main.cc  smartcalc_en_US.ts
build-src-Desktop-Debug/: CMakeCache.txt  Makefile  calc.cbp  cmake_install.cmake  smartcalc_v2.cbp
build-src-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-7db3a06506e4a9b3f50b.json  cache-v2-b4bf4e4c9d791b2228a7.json  cache-v2-c61b3abef4237bca0a27.json  cmakeFiles-v1-36aefb1b337a5cda9fae.json  cmakeFiles-v1-ae9d2f891dbc2a457f24.json  codemodel-v2-0d1939302e2559ab4575.json  codemodel-v2-12eb1fe88395d614b4a9.json  codemodel-v2-5ba3d75e64fbb140b63c.json  codemodel-v2-666f82c46fdd89566df3.json  codemodel-v2-6886f7f8554eab949eb4.json  codemodel-v2-a4192468a89bfa6b611d.json  codemodel-v2-e3b83c03aa001bee0dc1.json  codemodel-v2-e3cc11483ab0eed74671.json  codemodel-v2-e60360f685dc3883aad9.json  index-2023-06-01T11-29-46-0771.json  index-2023-06-01T14-31-51-0380.json  index-2023-06-01T14-54-25-0197.json  index-2023-06-02T09-28-26-0797.json  index-2023-06-02T16-40-44-0810.json  index-2023-06-03T13-40-31-0318.json  index-2023-06-03T14-10-07-0314.json  index-2023-06-03T14-21-52-0795.json  index-2023-06-03T15-19-41-0818.json  index-2023-06-03T20-10-09-0746.json  index-2023-06-04T12-20-42-0576.json  index-2023-06-07T05-28-28-0478.json  target-calc-Debug-4c81bb3ad9f3825a5991.json  target-calc-Debug-4eb3a5d76383732087e5.json  target-calc-Debug-5272c95e2b3778897f6f.json  target-calc-Debug-9cb45e60d359233e56e1.json  target-calc-Debug-a17ae82eed0a7cef60e5.json  target-calc-Debug-a7859dc91f3862099541.json  target-calc-Debug-d950defbc783cf172d2b.json  target-calc-Debug-dc9b573e2a0332184a13.json  target-calc-Debug-e39d797175b39c4a06a7.json  target-calc_autogen-Debug-ccf54f087f190bb9ec46.json
build-src-Desktop-Debug/calc_autogen/: mocs_compilation.cpp
build-src-Desktop-Debug/calc_autogen/3YJK5W5UP7/: qrc_resources.cpp
build-src-Desktop-Debug/calc_autogen/EXROJM2MPK/: moc_qcustomplot.cpp
build-src-Desktop-Debug/calc_autogen/OTUN7GXZT4/: moc_calculator.cpp  moc_credit.cpp  moc_mainwindow.cpp  moc_qcustomplot.cpp
build-src-Desktop-Debug/calc_autogen/include/: ui_calculator.h  ui_credit.h  ui_mainwindow.h
build-src-Desktop_x86_darwin_generic_mach_o_32bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
build-src-Desktop_x86_darwin_generic_mach_o_32bit-Debug/.cmake/api/v1/reply/: cache-v2-897489e1989a3be830a9.json  cmakeFiles-v1-436a4f4785aa3e6b96c9.json  codemodel-v2-dda3bb9ef9586039eaa9.json  index-2023-06-07T19-45-47-0665.json  target-calc-Debug-c2a115a4593a6db1e5fc.json  target-calc_autogen-Debug-7869ef214f85e4f8e77c.json
build-src-Desktop_x86_darwin_generic_mach_o_32bit-Debug/.qtc_clangd/: compile_commands.json
build-src-Desktop_x86_darwin_generic_mach_o_32bit-Debug/.qtc_clangd/.cache/clangd/index/: QActionGroup.3444BAED11DD718C.idx  QCache.E4EDDA13E4DF58BD.idx  QCommonStyle.41905E52E1FC9F62.idx  QDate.57CA49D15CA7D493.idx  QDateTime.32C5ACCB8131D181.idx  QDebug.20C7D625A9368CC6.idx  QElapsedTimer.C056D290CFB4E2E8.idx  QFileSystemModel.3E13299A0C2D78E2.idx  QFlags.D03414718C8DB946.idx  QFrame.3DFB083A6C8C8AEA.idx  QGridLayout.028B975FAD8DBCA1.idx  QLayout.B6F4433E92CABDB2.idx  QLineEdit.2F1A2DDE204D60BA.idx  QList.880E821CC7973B47.idx  QLocale.579D556260E47685.idx  QMainWindow.EA3B0D711E80F3D1.idx  QMargins.424FCBE2904D1626.idx  QMetaType.8A29DD860C209E43.idx  QMouseEvent.D916134BE3896E95.idx  QMultiMap.05AA293E79B4C82A.idx  QObject.A60FB15A859B9B4C.idx  QPaintDeviceWindow.1B02FCEE3C8D0898.idx  QPaintEvent.A64C0BA28149DD87.idx  QPainter.5B664FBAB7DFB289.idx  QPainterPath.DB936D91965BD97F.idx  QPixmap.0955AD586E863700.idx  QPointF.02DBBD69EA784075.idx  (+443 more)
build-src-Desktop_x86_darwin_generic_mach_o_32bit-Debug/calc_autogen/: moc_predefs.h  mocs_compilation.cpp
build-src-Desktop_x86_darwin_generic_mach_o_32bit-Debug/calc_autogen/3YJK5W5UP7/: qrc_resources.cpp
build-src-Desktop_x86_darwin_generic_mach_o_32bit-Debug/calc_autogen/EXROJM2MPK/: moc_qcustomplot.cpp
build-src-Desktop_x86_darwin_generic_mach_o_32bit-Debug/calc_autogen/OTUN7GXZT4/: moc_calculator.cpp  moc_credit.cpp  moc_mainwindow.cpp
build-src-Desktop_x86_darwin_generic_mach_o_32bit-Debug/calc_autogen/include/: ui_calculator.h  ui_credit.h  ui_mainwindow.h
code-samples/: consoleView.cpp  consoleView.h  exampleController.cpp  exampleController.h  exampleModel.cpp  exampleModel.h  main  main.cpp
controller/: controllercalculator.cc  controllercalculator.h  controllercredit.cc  controllercredit.h
model/: creditcalculator.cc  creditcalculator.h  expression.cc  expression.h
resources/: resources.qrc
src/: .gitignore  CMakeLists.txt  CMakeLists.txt.user.5c4ac44  Makefile  README.md  calc_en_US.ts  main.cc  main.cpp  smartcalc_v2_en_US.ts  todo
src/backend/: calc.c  calc.h  checkFuncs.c  credit.c  getPostfix.c  processFuncs.c  validateFunc.c  validateOperator.c  validateRPN.c
src/backend/stacks/: number.c  number.h  operation.c  operation.h
src/controller/: Controller.h  controllercalculator.cc  controllercalculator.h  controllercredit.cc  controllercredit.h
src/front/: CMakeLists.txt  calc_en_US.ts  calculator.cpp  calculator.h  calculator.ui  credit.cpp  credit.h  credit.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cpp
src/model/: Makefile  calculator.cc  calculator.h  credit.cc  credit.h  creditcalculator.cc  creditcalculator.h  expresion.cc  expresion.h  expression.cc  expression.h  main  main.cc  todo
src/resources/: resources.qrc
src/resources/icons/: icon.icns
src/test/: credit_test.cc  expression_test.cc  main.cc  test.h  unit_test.c  unit_test.cc
src/view/: calculator.cc  calculator.cpp  calculator.h  calculator.ui  credit.cc  credit.cpp  credit.h  mainwindow.cc  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cpp
src/view/QCustomPlot/: qcustomplot.h
test/: credit_test.cc  expression_test.cc  main.cc  test.h
view/: calculator.cc  calculator.h  calculator.ui  credit.cc  credit.h  mainwindow.cc  mainwindow.h  mainwindow.ui
